Fixed some elements on skills page, alignment needs to be fixed.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -85,17 +85,6 @@ nav ul a:hover {
 .body-text-block h1, .body-text-block-alt h1 {
     font-size: 3rem;
 }
-.body-text-block-alt {
-    color: #BCBCBC;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    max-width: fit-content;
-    border-radius: 1em;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-45%);
-    transform: translateY(-45%);
-}
 .body-text-body {
     margin-top: -40px;
     display: flex;
@@ -180,26 +169,31 @@ span.effect {
     color: #657b81;
     transition: ease-in 0.5s;
 }
-.skills-container {
-    margin: auto;
+.body-text-block-alt {
+    color: #BCBCBC;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
 }
 .skills-row {
     display: flex;
-    flex-wrap: wrap;
-}
-.skills-column {
-    flex: 50%;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 50px;
+    max-width: 100vw;
 }
 .skills-logo {
-    margin-right: 25px;
-    margin-top: 8px;
-    vertical-align: middle;
     opacity: 0.5;
     transition: ease-in 0.5s;
-    max-width: 150px;
-    max-height: 150px;
+    display: block;
+    max-width:300px;
+    max-height:110px;
+    width: auto;
+    height: auto;
 }
 .skills-logo:hover {
     opacity: 1;
     transition: ease-out 0.25s;
+}
+.skills-desc {
+    text-align: center;
 }
